# computer-use

./: .clinerules  .gitignore  README.md  main.py  pyproject.toml
.clinerules/: 01-general.md  02-techstack.md  03-project.md  04-workflow.md
scripts/: prompts.txt  test_goal_rewriter.py
src/computer_use_agent/: __init__.py  agent.py  cli.py
src/computer_use_agent/actions/: __init__.py  executor.py  screen.py
src/computer_use_agent/config/: __init__.py  prompts.py  settings.py
src/computer_use_agent/utils/: __init__.py  goal_rewriter.py  llm_logger.py  response_handler.py  retry.py
